# docktail

./: .gitignore  Cargo.toml  docker-compose.yml
crates/agent/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
crates/agent/config/: agent.toml
crates/agent/proto/: agent.proto
crates/agent/scripts/: generate-certs.sh
crates/agent/src/: config.rs  lib.rs  main.rs  state.rs
crates/agent/src/client/: docker.rs  error.rs  fake.rs  live.rs  mod.rs
crates/agent/src/conf/: group.rs  load.rs  mod.rs  model.rs  tls.rs
crates/agent/src/container/: map.rs  mod.rs  route.rs
crates/agent/src/control/: map.rs  mod.rs  route.rs
crates/agent/src/docker/: client.rs  container.rs  error_map.rs  event.rs  image.rs  inventory.rs  mod.rs  network.rs  shell.rs  stream.rs  swarm.rs  volume.rs
crates/agent/src/filter/: engine.rs  mod.rs  regex.rs
crates/agent/src/health/: mod.rs  route.rs
crates/agent/src/job/: mod.rs  sync.rs
crates/agent/src/logs/: detect.rs  group.rs  map.rs  mod.rs  pattern.rs  route.rs
crates/agent/src/parser/: ansi.rs  cache.rs  detector.rs  metrics.rs  mod.rs  model.rs  serde_utils.rs  traits.rs
crates/agent/src/parser/formats/: http_log.rs  json.rs  logfmt.rs  mod.rs  plain.rs  syslog.rs
crates/agent/src/proto/: mod.rs
crates/agent/src/runtime/: boot.rs  mod.rs  serve.rs  stop.rs  tls.rs
crates/agent/src/service/: background.rs  control.rs  health.rs  inventory.rs  logs.rs  mod.rs  multiline.rs  shell.rs  stats.rs  swarm.rs
crates/agent/src/shell/: map.rs  mod.rs  route.rs
crates/agent/src/state/: agent.rs  mod.rs  role.rs
crates/agent/src/stats/: map.rs  mod.rs  route.rs
crates/agent/src/swarm/: compose.rs  config.rs  event.rs  health.rs  info.rs  map.rs  mod.rs  node.rs  route.rs  secret.rs  service.rs  stack.rs  task.rs  update.rs
crates/cluster/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
crates/cluster/config/: cluster.toml
crates/cluster/src/: config.rs  error.rs  main.rs  metrics.rs  state.rs
crates/cluster/src/agent/: client.rs  discovery.rs  mod.rs  pool.rs  registry.rs
crates/cluster/src/graphql/: mod.rs  mutations.rs  schema.rs  shell_ws.rs
crates/cluster/src/graphql/subscriptions/: mod.rs
crates/cluster/src/graphql/types/: agent.rs  container.rs  log.rs  mod.rs  stats.rs  swarm.rs
scripts/: quick-start.sh
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte  app.css
ui/src/lib/: Sidebar.svelte  ThemeSwitcher.svelte  WorkloadSection.svelte
ui/src/lib/agents/: AgentCard.svelte  AgentListRow.svelte
ui/src/lib/api/: client.ts  errors.ts  helpers.ts  index.ts  queries.ts  subscriptions.ts  types.ts
ui/src/lib/common/: Badge.svelte  Breadcrumbs.svelte  Button.svelte  Card.svelte  DataTable.svelte  EmptyState.svelte  ErrorDisplay.svelte  ErrorState.svelte  FilterButton.svelte  InfoGrid.svelte  LoadingState.svelte  PageHeader.svelte  PortsList.svelte  RefreshButton.svelte  ResourceBar.svelte  ResourceStats.svelte  SearchInput.svelte  SectionCard.svelte  Spinner.svelte  StatCard.svelte  StatusDot.svelte  TabNav.svelte
ui/src/lib/components/: AgentHealthMonitor.svelte  RealTimeStats.svelte
ui/src/lib/layout/: Footer.svelte  (+2 more)
ui/src/routes/: AgentDetails.svelte  Agents.svelte  Cluster.svelte  ContainerDetails.svelte  Containers.svelte  Logs.svelte  Networks.svelte  NodeDetails.svelte  Nodes.svelte  SecretsConfigs.svelte  ServiceDetails.svelte  Services.svelte  StackDetails.svelte  Stacks.svelte  SwarmOverview.svelte
(+8 files in other folders)
