[package]
name = "agent"
version = "0.0.1"
edition = "2021"

[dependencies]
# gRPC & Protobuf
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14.3"
prost-types = "0.14.3"  # For google.protobuf.Timestamp support

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Docker API
bollard = "0.20"

# Memory-efficient bytes (zero-copy log streaming)
bytes = "1.5"

# SIMD Filtering (Ripgrep engine)
grep-matcher = "0.1"
grep-searcher = "0.1"
grep-regex = "0.1"

# Security (mTLS)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Concurrency
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

# Error Handling
thiserror = "2.0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
async-stream = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.2"
