[package]
name = "agent"
version = "0.0.1"
edition = "2021"

[dependencies]
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14.3"
prost-types = "0.14.3"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

bollard = "0.20"

bytes = "1.5"

grep-matcher = "0.1"
grep-searcher = "0.1"
grep-regex = "0.1"

rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

dashmap = "6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

thiserror = "2.0.18"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
async-stream = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.2"
