[package]
name = "cluster"
version = "0.0.1"
edition = "2021"

[dependencies]
# GraphQL
async-graphql = { version = "7", features = ["chrono", "dataloader"] }
async-graphql-axum = "7"

# Web Framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# gRPC Client (matches agent tonic version)
tonic = { version = "0.14.2", features = ["transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14.3"
prost-types = "0.14.3"  # For google.protobuf.Timestamp support

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
pin-project = "1"

# Security
rustls = "0.23"
tokio-rustls = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async Streams
tokio-stream = "0.1"

# Configuration
config = "0.15.19"
dotenvy = "0.15"

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.2"
